k8s/apps/n8n/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-svc
  namespace: apps
  labels:
    app: n8n
spec:
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: n8n.marco-sr.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-svc
                port:
                  number: 5678
